# decodilo

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  artifact_backend_contract.md  artifact_backend_interface.md  artifact_retention_gc.md  artifact_transport.md  binary_tensor_artifacts.md  checkpoint_lifecycle.md  chunked_recovery.md  chunked_storage.md  ci_profiles.md  ci_test_profiles.md  cloud_dry_run.md  cloud_launcher_safety.md  cost_model.md  fault_injection.md  flake_policy.md  gc_accounting.md  gc_cleanup.md  goodput_model.md  idempotency_compaction.md  invariants.md  lambda_alternative_shape_selection.md  lambda_api_boundary.md  lambda_availability_first_launch.md  lambda_availability_first_selector.md  lambda_bounded_diloco_experiment.md  lambda_capacity_aware_reporting.md  lambda_capacity_aware_retry_policy.md  lambda_capacity_error_closeout.md  lambda_capacity_followup.md  lambda_capacity_history_aware_selector.md  lambda_capacity_history_selector_policy.md  lambda_capacity_retry_policy.md  lambda_capacity_selected_command_preview.md  lambda_capacity_selected_launch_gate.md  lambda_capacity_selected_m046_authorization.md  lambda_capacity_selected_operator_approval.md  lambda_catalog_availability_launch_gate.md  lambda_catalog_availability_m042_authorization.md  lambda_catalog_availability_risk_acceptance.md  (+272 more)
docs/adr/: 0001-system-boundaries.md  0002-cpu-simulator-first.md  0003-cost-per-useful-token.md
docs/evidence/lambda_l1_adamw_nesterov_1bada235b/: README.md  events.jsonl  lambda_l1_evidence_package.json  learner-0.checkpoint.json  learner-1.checkpoint.json  report.json  syncer_checkpoint.json  termination_safety.json
docs/evidence/pathway_scheduler_long_local_no_restart/: scheduler_result.json  validation_report.json
docs/evidence/storage_availability/: lambda_storage_check_2026-07-01.json
docs/lambda_l2/: remote_runtime_design.md
docs/lambda_l3/: direct_tcp_runtime_design.md
docs/lambda_l4/: multiround_direct_tcp_runtime_design.md
docs/progress/: production_scale_status_2026-07-01.md
src/decodilo/: __init__.py  cli.py  errors.py  time_compat.py
src/decodilo/cloud/: __init__.py  disabled_launcher.py  dry_run.py  lambda_api_preflight.py  lambda_plan.py  lambda_shapes.py  launch_plan.py  launch_preflight.py  launch_review.py  launcher_interface.py  no_op_client.py  remote_backend_preflight.py  remote_backend_readiness_preflight.py  remote_backend_review_preflight.py  safety.py  teardown_plan.py
src/decodilo/dev/: __init__.py  bounded_diloco_experiment.py  diloco_optimizer_smoke.py  diloco_smoke.py  integrated_diloco_smoke.py  learner_syncer_smoke.py  parameter_fragment_smoke.py  runtime_smoke.py  tiny_smoke.py  (+2 more)
tests/: conftest.py  lambda_fake_lifecycle_helpers.py  lambda_live_server_helper.py  lambda_m023_helpers.py  lambda_m024_helpers.py  lambda_m025_helpers.py  lambda_m026_helpers.py  lambda_m027_helpers.py  lambda_m028_helpers.py  lambda_m029_helpers.py  lambda_m029d_helpers.py  lambda_m030_helpers.py  lambda_m031d_helpers.py  lambda_m033_helpers.py  lambda_m034a_helpers.py  lambda_m034d_helpers.py  lambda_m035_helpers.py  lambda_m036_helpers.py  lambda_m037_helpers.py  lambda_m037r_helpers.py  lambda_m038_helpers.py  lambda_m039a_helpers.py  lambda_m040_helpers.py  lambda_m041_helpers.py  lambda_m043_helpers.py  lambda_m044_helpers.py  lambda_m044g_helpers.py  lambda_m044h_helpers.py  lambda_m045_helpers.py  lambda_m046a_helpers.py  lambda_m047_helpers.py  lambda_m050_helpers.py  lambda_m051_helpers.py  lambda_m052_helpers.py  lambda_m053_helpers.py  lambda_m054a_helpers.py  lambda_m055d_helpers.py  lambda_m058_helpers.py  lambda_m060_helpers.py  lambda_m062_helpers.py  (+1102 more)
tests/fixtures/: lambda_prices_expected.json  lambda_pricing_snapshot.html
tests/helpers/: subprocess_retry.py
tools/: lambda_l2_runner.py  lambda_l3_runner.py  lambda_l4_runner.py  lambda_l5_runner.py
tools/remote_probe/: import_decodilo.py
(+3360 files in other folders)
